<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Sumo Remote</string>
    <string name="action_about">About</string>
    <string name="action_preferences">Preferences</string>
    <string name="action_custom_commands">Custom commands</string>
    <string name="action_add_command">Add command</string>
    <string name="action_import">Import with Sumo Remote</string>
    <string name="action_export_to_file">Export to file</string>
    <string name="action_export_and_email">Export and e-mail</string>
    
    <string name="address_range">Address (0&#8211;31)</string>
    <string name="command_range">Command (0&#8211;63)</string>
    <string name="address">Address</string>
    <string name="command">Command</string>
    <string name="name">Name</string>
    <string name="zero" translatable="false">0</string>
    <string name="program_button">PROGRAM</string>
    <string name="start_button">START</string>
    <string name="stop_button">STOP</string>
    <string name="double_back_toast">Press BACK again to exit</string>
    <string name="ir_not_detected_title">IR emitter not detected</string>
    <string name="ir_not_detected_full">Your device is not equipped with an IR emitter or Sumo Remote doesn\'t know how to use it yet.</string>
    <string name="ir_not_detected_button">I see, that\'s sad&#8230;</string>

    <string name="author">by Piotr Krzemiński (mcft.eu)</string>
    <string name="version_dummy" translatable="false">v</string>
    <string name="app_description">This app acts as a remote for sumo robots, compatible with these modules: http://www.startmodule.com/main-description/.</string>
    <string name="logo_description">Magnat Cyber Forge Team logo</string>
    <string name="people_who_helped_desc">A big thanks for any help during the development of Sumo Remote go to:</string>
    
	<string-array name="people_who_helped" translatable="false">
	    <item>Calle Arenander</item>
	    <item>Claudiu Avram</item>
	    <item>Jarosław Korus</item>
	    <item>Klaipeda University Robotics Club</item>
	    <item>Mateusz Piotrzkowski</item>
		<item>Mikołaj Belowski</item>
		<item>Michał Kurpis</item>
		<item>Petter Forsberg</item>
	</string-array>
    
    <string name="address_preference" translatable="false">address</string>
    
    <string name="general">General</string>
    <string name="home_mode">Home mode</string>
    <string name="use_home_mode">The app works like a TV remote</string>
    
    <string name="appearance">Appearance</string>
    <string name="screen_orientation">Screen orientation</string>
    <string name="which_way_screen_rotated">You can choose the most comfortable orientation, depending or the situation or your device.</string>
    <string name="use_dark_theme">Use dark theme</string>
    <string name="reduces_energy_usage">Reduces energy usage on AMOLEDs</string>
    
    <string name="no_commands">No custom commands.\n\nYou can add new commands by tapping the \'+\' button in the top-right corner.</string>
    <string name="name_too_short">Name cannot be empty!</string>
    <string name="command_default_name_prefix">Command</string>
    
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="command_name_dummy" translatable="false">Command name</string>
    <string name="address_and_command_dummy" translatable="false">Address and command</string>
    
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="overwrite">Overwrite?</string>
    <string name="overwrite_full_sentence">A command with this name already exists. Do you want to overwrite it?</string> 
    
    <string name="import_confirm">Confirm</string>
    <string name="import_cancel">Cancel</string>

</resources>
