<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/general">
        
        <CheckBoxPreference android:title="@string/home_mode"
            android:key="home_mode"
            android:summary="@string/use_home_mode"/>
        
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/appearance">
        
        <ListPreference
            android:title="@string/screen_orientation"
            android:key="screen_orientation"
            android:summary="@string/which_way_screen_rotated"
            android:entries="@array/screen_orientations"
            android:entryValues="@array/screen_orientations_values"
            android:defaultValue="portrait"/>
        
        <CheckBoxPreference android:title="@string/use_dark_theme"
            android:key="theme"
            android:summary="@string/reduces_energy_usage"/>
        
    </PreferenceCategory>
</PreferenceScreen>