<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addressLabel"
        android:layout_alignRight="@+id/addressLabel"
        android:layout_below="@+id/addressLabel"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="number"
        android:text="@string/zero"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/command"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/commandLabel"
        android:layout_alignRight="@+id/commandLabel"
        android:layout_below="@+id/commandLabel"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:inputType="number"
        android:text="@string/zero"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/commandLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_centerHorizontal="true"
        android:text="@string/command_range"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true"
        android:text="@string/address_range"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameLabel"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"
        android:ems="10"
        android:inputType="text|textCapSentences|textNoSuggestions"
        android:textAppearance="?android:attr/textAppearanceLarge" >

        <requestFocus />
    </EditText>
	
</RelativeLayout>
